--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+Python-Readability-lxml Version 0.3.0.7
+=======================================
+
+Forked from Yuri Baburov <burchik@gmail.com>
+
 This code is under the Apache License 2.0.  http://www.apache.org/licenses/LICENSE-2.0
 
 This is a python port of a ruby port of arc90's readability project
@@ -16,11 +21,25 @@ Based on:
  - "BR to P" fix from readability.js which improves quality for smaller texts.
  - Github users contributions.
 
+
 Installation::
+
+Dev Version:
+
+    wget https://github.com/appscluster/python-readability/archive/master.zip
+
+    7z x master.zip ( if you don't have 7z : sudo apt-get install p7zip-full )
+
+    cd python-readability-master/
+
+    python setup.py install
+
+Base Version:
 
     easy_install readability-lxml
     or
     pip install readability-lxml
+
 
 Usage::
 
@@ -30,9 +49,16 @@ Usage::
     readable_article = Document(html).summary()
     readable_title = Document(html).short_title()
 
+
 Command-line usage::
+    
+    Default: 
 
     python -m readability.readability -u http://pypi.python.org/pypi/readability-lxml
+
+    Add User-Agent: 
+
+    python -m readability.readability -u http://www.bbc.co.uk/newsbeat/30520643 -a "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36" 
 
 
 Using positive/negative keywords example::
@@ -53,7 +79,5 @@ Document() kwarg options:
 
 Updates
 
- - 0.2.5 Update setup.py for uploading .tar.gz to pypi
- - 0.2.6 Don't crash on documents with no title
- - 0.2.6.1 Document.short_title() properly works
- - 0.3 Added Document.encoding, positive_keywords and negative_keywords
+ - 0.3.0.7 Encoding updated based on buriy's update
+ - 0.3.0.6 Added option for User-Agent inclusion
